Commiting Stable Version

--- a/lsms/src/main/webapp/ext/extended_page1.xhtml
+++ b/lsms/src/main/webapp/ext/extended_page1.xhtml
@@ -54,6 +54,9 @@
                             <p:column>
                                 <h:outputText value="#{g.extGridId.gridName}"/>
                             </p:column>
+                            <p:column headerText="load">
+                                <h:inputText value="#{g.gridLoad}"/>
+                            </p:column>
                         </p:dataTable>
                     </p:panel>
                     <p:separator />
