--- a/lsms/src/main/webapp/block/bk_2.xhtml
+++ b/lsms/src/main/webapp/block/bk_2.xhtml
@@ -5,22 +5,35 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-   
-    <h:head>
-        <title>Blocks</title>
-    </h:head>
-    
+         
     <h:body>
         <ui:composition template="/template/template.xhtml">
             <ui:define name="content">
-                <p:dataTable value="#{blockBean.blockList}" var="block">
-                    <p:column>
+                <h:form id="block">
+                    <p:dataTable id="bTable" value="#{blockBean.blockList}" var="block">
                         <f:facet name="header">
-                            <h:outputText value="Blocks" />
+                            <h:outputText value="BLOCKS"/>
                         </f:facet>
-                        <h:outputText value="#{block.blockName}" />
-                    </p:column>
-                </p:dataTable>
+                        <p:column>
+                            <h:outputText value="#{block.blockName}" />
+                        </p:column>
+                        <p:column>
+                            <p:commandButton value="EDIT" action="#{blockBean.onBlockSelection(block)}"
+                                             oncomplete="PF('bdlg').show();" update=":block:bTable"/>
+                        </p:column>
+                        <p:column>
+                            <p:commandButton value="DELETE" action="#{blockBean.blockDeleter(block)}" update=":block:bTable"/>
+                        </p:column>
+                    </p:dataTable>
+                    <p:dialog id="bd" header="Edit Block" widgetVar="bdlg" showEffect="explode" hideEffect="drop">
+                        <p:panelGrid columns="2">
+                            <p:outputLabel for="bName" value="Name"/>
+                            <p:inputText id="bName" value="#{blockBean.newBlockName}" />
+                        </p:panelGrid>
+                        <p:separator/>
+                        <p:commandButton value="SUBMIT" action="#{blockBean.blockEditor()}" update=":block:bTable"/>
+                    </p:dialog>
+                </h:form>
             </ui:define>
         </ui:composition>
     </h:body>
