--- a/lsms/src/main/webapp/spg/spg_2.xhtml
+++ b/lsms/src/main/webapp/spg/spg_2.xhtml
@@ -9,46 +9,49 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
+        <ui:composition template="/template/template.xhtml">
+            <ui:define name="content">
+                <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()"/>
+                <p:dialog widgetVar="statusDialog" modal="true" draggable="false"
+                          closable="false" resizable="false" showHeader="false">
+                    <p:graphicImage library="images" name="ajaxloading.gif" />
+                </p:dialog>
 
-        <p:ajaxStatus onstart="PF('statusDialog').show()" onsuccess="PF('statusDialog').hide()"/>
-        <p:dialog widgetVar="statusDialog" modal="true" draggable="false"
-                  closable="false" resizable="false" showHeader="false">
-            <p:graphicImage library="images" name="ajaxloading.gif" />
-        </p:dialog>
-
-        <h:form id="loadForm">
-            <p:panel>
-                <p:panelGrid id="selection" columns="2">  
-                    <p:outputLabel for="feeders" value="Select Feeder "/>
-                    <p:selectOneMenu id="feeders" value="#{specialGroupLoadBean.selectedFeeder}">
-                        <f:selectItem itemLabel="Select feeder" itemValue="" noSelectionOption="true" />
-                        <f:selectItems value="#{specialGroupLoadBean.feederName}"/>
-                        <p:ajax event="change" listener="#{specialGroupLoadBean.onFeederSelection()}" update=":loadForm:cycles"/>
-                    </p:selectOneMenu>
-                    <p:outputLabel for="cycles" value="Select Cycle "/>
-                    <p:selectOneMenu id="cycles" value="#{specialGroupLoadBean.selectedCycle}">
-                        <f:selectItem itemLabel="Select cycle" itemValue="" noSelectionOption="true" />
-                        <f:selectItems value="#{specialGroupLoadBean.cycleNames}"/>
-                        <p:ajax event="change" listener="#{specialGroupLoadBean.onCycleSelection()}" update=":loadForm:loadPanel"/>
-                    </p:selectOneMenu>
-                </p:panelGrid>
-                <p:separator/>
-                <p:panelGrid id="loadPanel" columns="2">
-                    <p:outputLabel for="feedname" value="Feeder"/>
-                    <h:outputText id="feedname" value="#{specialGroupLoadBean.cycle.spFeeder.feeder.feedName}"/>
-                    <p:outputLabel for="name" value="Cycle name"/>
-                    <h:outputText id="name" value="#{specialGroupLoadBean.cycle.cycleName}"/>
-                    <p:outputLabel for="stTime" value="Start time"/>
-                    <h:outputText id="stTime" value="#{specialGroupLoadBean.cycle.stTime}"/>
-                    <p:outputLabel for="endTime" value="End time"/>
-                    <h:outputText id="endTime" value="#{specialGroupLoadBean.cycle.endTime}"/>
-                    <p:outputLabel for="load" value="Load"/>
-                    <h:inputText id="load" value="#{specialGroupLoadBean.CLoad}"/>
-                </p:panelGrid>
-                <p:separator/>
-                <p:commandButton value="submit" action="#{specialGroupLoadBean.onLoadSubmit()}"/>
-            </p:panel>
-        </h:form>
+                <h:form id="loadForm">
+                    <p:panel>
+                        <p:panelGrid id="selection" columns="2">  
+                            <p:outputLabel for="feeders" value="Select Feeder "/>
+                            <p:selectOneMenu id="feeders" value="#{specialGroupLoadBean.selectedFeeder}">
+                                <f:selectItem itemLabel="Select feeder" itemValue="" noSelectionOption="true" />
+                                <f:selectItems value="#{specialGroupLoadBean.feederName}"/>
+                                <p:ajax event="change" listener="#{specialGroupLoadBean.onFeederSelection()}" update=":loadForm:cycles"/>
+                            </p:selectOneMenu>
+                            <p:outputLabel for="cycles" value="Select Cycle "/>
+                            <p:selectOneMenu id="cycles" value="#{specialGroupLoadBean.selectedCycle}">
+                                <f:selectItem itemLabel="Select cycle" itemValue="" noSelectionOption="true" />
+                                <f:selectItems value="#{specialGroupLoadBean.cycleNames}"/>
+                                <p:ajax event="change" listener="#{specialGroupLoadBean.onCycleSelection()}" update=":loadForm:loadPanel"/>
+                            </p:selectOneMenu>
+                        </p:panelGrid>
+                        <p:separator/>
+                        <p:panelGrid id="loadPanel" columns="2">
+                            <p:outputLabel for="feedname" value="Feeder"/>
+                            <h:outputText id="feedname" value="#{specialGroupLoadBean.cycle.spFeeder.feeder.feedName}"/>
+                            <p:outputLabel for="name" value="Cycle name"/>
+                            <h:outputText id="name" value="#{specialGroupLoadBean.cycle.cycleName}"/>
+                            <p:outputLabel for="stTime" value="Start time"/>
+                            <h:outputText id="stTime" value="#{specialGroupLoadBean.cycle.stTime}"/>
+                            <p:outputLabel for="endTime" value="End time"/>
+                            <h:outputText id="endTime" value="#{specialGroupLoadBean.cycle.endTime}"/>
+                            <p:outputLabel for="load" value="Load"/>
+                            <h:inputText id="load" value="#{specialGroupLoadBean.CLoad}"/>
+                        </p:panelGrid>
+                        <p:separator/>
+                        <p:commandButton value="submit" action="#{specialGroupLoadBean.onLoadSubmit()}"/>
+                    </p:panel>
+                </h:form>
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
 
